Atualização do arquivo de pipeline

--- a/github/workflows/cypress-pipeline.yml
+++ b/github/workflows/cypress-pipeline.yml
@@ -4,7 +4,7 @@ name: Executar Pipeline Cypress
 # Momento de Execução
 on: 
   pull_requests:
-    braches: [master]
+    branches: [master]
 
 jobs: 
   # Definições para Rodar os Testes na Pipeline
