--- a/github/workflows/cypress-pipeline.yml
+++ b/github/workflows/cypress-pipeline.yml
@@ -2,9 +2,9 @@
 name: Executar Pipeline Cypress
 
 # Momento de Execução
-on: 
-  pull_requests:
-    branches: [master]
+on:
+  pull_request:
+    branches: [ "main" ]
 
 jobs: 
   # Definições para Rodar os Testes na Pipeline
