--- a/github/workflows/cypress-pipeline.yml
+++ b/github/workflows/cypress-pipeline.yml
@@ -2,9 +2,9 @@
 name: Executar Pipeline Cypress
 
 # Momento de Execução
-on: 
-  pull_requests:
-    branches: [master]
+on:
+  pull_request:
+    branches: [ "main" ]
 
 jobs: 
   # Definições para Rodar os Testes na Pipeline
@@ -29,4 +29,4 @@ jobs:
           record: true
         env:
           # GitHub token 
-          CYPRESS_RECORD_KEY: ${{ secrets.GITHUB_CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
