--- a/github/workflows/cypress-pipeline.yml
+++ b/github/workflows/cypress-pipeline.yml
@@ -30,3 +30,10 @@ jobs:
         env:
           # GitHub token 
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      
+      # Upload do relatório do mocha
+      - name: Upload relatório Mocha      
+        uses: actions/upload-artifact@v4
+        with:
+          name: Relatório de Execução
+          path: cypress/reports/html
